--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,4 +1,16 @@
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+
+# Status Bar Config
+set -g status-position bottom
+set -g status-left-length 20
+
+# Active Window Highlighting
+set -g window-style fg=color245,bg=default
+set -g window-active-style fg=color255,bg=default
+
+# Key Bindings
+bind r source-file ~/.config/.tmux.conf \; display "Config reloaded!"
 
 run '~/.tmux/plugins/tpm/tpm'
