add dependencies for headless linux terminals

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,3 +1,13 @@
 [user]
 	email = phill@phillhood.ca
 	name = Phill Hood
+[init]
+	defaultBranch = main
+[pull]
+	rebase = true
+[push]
+	autoSetupRemote = true
+[merge]
+	conflictstyle = zdiff3
+[core]
+	excludesfile = /home/shy/.gitignore_global
