--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -10,7 +10,20 @@ set -g status-left-length 20
 set -g window-style fg=color245,bg=default
 set -g window-active-style fg=color255,bg=default
 
+# Window Numbering
+set -g base-index 1
+setw -g pane-base-index 1
+
+# Mouse
+set -g mouse on
+
 # Key Bindings
 bind r source-file ~/.config/.tmux.conf \; display "Config reloaded!"
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
+
+# Prefix
+unbind C-b
+set -g prefix C-a
 
 run '~/.tmux/plugins/tpm/tpm'
