dependencies, nvim configs

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -2,13 +2,17 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
+# True color support
+set -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
+
 # Status Bar Config
 set -g status-position bottom
 set -g status-left-length 20
 
-# Active Window Highlighting
-set -g window-style fg=color245,bg=default
-set -g window-active-style fg=color255,bg=default
+# Active Window Highlighting (removed bg=default to allow app colors)
+set -g window-style fg=default
+set -g window-active-style fg=default
 
 # Window Numbering
 set -g base-index 1
@@ -18,7 +22,7 @@ setw -g pane-base-index 1
 set -g mouse on
 
 # Key Bindings
-bind r source-file ~/.config/.tmux.conf \; display "Config reloaded!"
+# bind r source-file ~/.config/tmux/tmux.conf \; display "Config reloaded!"
 bind | split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 
@@ -26,4 +30,4 @@ bind - split-window -v -c "#{pane_current_path}"
 unbind C-b
 set -g prefix C-a
 
-run '~/.tmux/plugins/tpm/tpm'
+run '~/.config/tmux/plugins/tpm/tpm'
